Review test after create generic exceptions and changes in packages of exceptions